// Vitest Snapshot v1

exports[`InputNumber > :props > :defaultValue, default value 6 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :disabled, function can not be call 1`] = `
<div
  class="t-input-number t-size-m t-is-disabled t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-is-disabled t-button--shape-square t-input-number__decrease t-is-disabled"
    disabled="disabled"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-disabled t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        disabled="disabled"
        placeholder="请输入"
        title=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-is-disabled t-button--shape-square t-input-number__increase t-is-disabled"
    disabled="disabled"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :format, with 6% 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :max, value 6 < max 10 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :max, value 16 > max 10 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-error t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :min, value -1 < min 1 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-error t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :min, value 6 > min 1 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :mode, without class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :mode:column, with class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m t-is-controls-right t-input-number--column"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-chevron-down t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-down"
      >
        <path
          d="M17.5 9.5L12 15L6.5 9.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-chevron-up t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-up"
      >
        <path
          d="M17.5 14.5L12 9L6.5 14.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :mode:row, without class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :size:large, with class t-size-l 1`] = `
<div
  class="t-input-number t-size-l t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-l"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-l"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :size:medium, with class t-size-m 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :size:small, with class t-size-s 1`] = `
<div
  class="t-input-number t-size-s t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-s"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-s"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :step, 2 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :value, 6 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > :value, 6.55 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`InputNumber > :props > class, with class t-input-number 1`] = `
<div
  class="t-input-number t-size-m t-input-number--row"
>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
    type="button"
  >
    <svg
      class="t-icon t-icon-remove t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="remove"
      >
        <path
          d="M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
  <button
    class="t-button t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
    type="button"
  >
    <svg
      class="t-icon t-icon-add t-size-m"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="add"
      >
        <path
          d="M12 5L12 19M19 12L5 12"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </button>
</div>
`;
